data/derived/sp14/progs/unify/prog2821.ml.out
Characters 239-254:
  removeZero (add (padZero l1 l2));;
                  ^^^^^^^^^^^^^^^
Error: This expression has type int list
       but an expression was expected of type 'a * 'b
